Potential fix for text overlapping on 1440x900 screens

--- a/src/styles/banner-box.css
+++ b/src/styles/banner-box.css
@@ -48,7 +48,7 @@
 }
 
 /* Breakpoint for medium-size desktop/laptop screens */
-@media only screen and (max-width: 1400px) {
+@media only screen and (max-width: 1500px) {
     .banner_box {
         min-height: 500px;
         display: flex;
